# Programming-Problems

./: .gitignore  CMakeLists.txt  README.md
1_C++/are_permutations/: readme.md
1_C++/are_permutations/src/: cop3530_1_2.h
1_C++/are_permutations/test-unit/: test.cpp
1_C++/substring_match/: readme.md
1_C++/substring_match/src/: cop3530_1_3.h
1_C++/suffix_count/: Makefile  readme.md
1_C++/triple_sum/: readme.md
1_C++/valid_brackets/: readme.md
2_Lists/interquartile_range/: readme.md
2_Lists_Stacks_Queues/evaluate_postfix/: readme.md
2_Lists_Stacks_Queues/interquartile_range/: readme.md
2_Lists_Stacks_Queues/make_valid_string/: readme.md
2_Lists_Stacks_Queues/valid_brackets/: readme.md
3_Trees/count_good_nodes/: readme.md
3_Trees/good_nodes/: readme.md
3_Trees/kth_smallest/: readme.md
3_Trees/kth_smallest_value/: readme.md
3_Trees/level_frequency/: readme.md
3_Trees/sum_of_level/: readme.md
4_Heaps/extract_max/: readme.md
5_Sets_Maps/degree_of_string/: readme.md
5_Sets_Maps/find_digits/: readme.md
5_Sets_Maps/find_the_digits/: readme.md
5_Sets_Maps/four_digit_numbers/: readme.md
5_Sets_Maps/four_digits/: readme.md
6_Graph_Implementations/not_so_simple_graph/: readme.md
7_Graph_Algorithms/andrewfied_dijkstra/: readme.md
7_Graph_Algorithms/andrewfied_maze_escape/: readme.md
7_Graph_Algorithms/hidden_gator/: readme.md
7_Graph_Algorithms/src/: cop3530_7_4.h
7_Graph_Algorithms/valid_path/: readme.md
8_Dynamic_Programming/exploring_swamp/: readme.md
Projects/Project1/: readme.md
Shorts/: template.md
(+153 files in other folders)
